# user-collection

./: CMakeLists.txt  main.cpp
Interface/: Collection.h  Iterator.h
Vector/: VecIterator.cpp  VecIterator.h  Vector.cpp  Vector.h
src/: CMakeLists.txt
src/Interface/: CMakeLists.txt  Collection.cpp  Collection.h  Iterator.cpp  Iterator.h  Node.h
src/Stack/: CMakeLists.txt  Stack.cpp  Stack.h  StackIterator.cpp  StackIterator.h
src/Tree/: BreadthIterator.cpp  BreadthIterator.h  CMakeLists.txt  DepthIterator.cpp  DepthIterator.h  Tree.cpp  Tree.h
src/Vector/: CMakeLists.txt  VecIterator.cpp  VecIterator.h  Vector.cpp  Vector.h
